@@ -1,6 +1,7 @@
 package com.examples.basic.services;
 
 import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import org.bytedeco.javacpp.BytePointer;
@@ -16,8 +17,8 @@ import org.springframework.stereotype.Service;
 @Service
 public class TesseractService {
     
-    //private static final String TESS_DATA_PATH = "/usr/share/tesseract-ocr/4.00/tessdata";
-    private static final String TESS_DATA_PATH = "C:\\msys64\\mingw64\\share\\tessdata";
+    private static final String TESS_DATA_PATH = "/usr/share/tesseract-ocr/4.00/tessdata";
+    //private static final String TESS_DATA_PATH = "C:\\msys64\\mingw64\\share\\tessdata";
     private final Logger log = LoggerFactory.getLogger(TesseractService.class);
     
     public String process(String urlAddress) {
@@ -27,8 +28,9 @@ public class TesseractService {
         PIX image = null;
         try {
             // Open input image with leptonica library
-            URL url = new URL(urlAddress);
-            File file = Loader.cacheResource(url);            
+            URI uri = new URI(urlAddress);
+            URL url = new URL(uri.toASCIIString());
+            File file = Loader.cacheResource(url);
             
             api = new TessBaseAPI();
             // Initialize tesseract-ocr with Thai+English, with specifying tessdata path
